--- a/src/scss/components/_categories.scss
+++ b/src/scss/components/_categories.scss
@@ -3,8 +3,9 @@
 .categories {
   ul {
     display: flex;
-
+    flex-wrap: wrap;
     li {
+      margin-top: 12px;
       background-color: #f9f9f9;
       padding: 13px 30px;
       border-radius: 30px;
